--- a/css/_common.styl
+++ b/css/_common.styl
@@ -38,3 +38,8 @@ small-hr($size, $color)
 
 white-text-shadow()
   text-shadow: 0 1px 2px rgba(black, 0.2)
+
+pointer-events(value)
+  -webkit-pointer-events: value
+  -moz-pointer-events: value
+  pointer-events: value
