--- a/css/base.styl
+++ b/css/base.styl
@@ -226,6 +226,7 @@ html
   &.hide
     opacity: 0
     transition: opacity 300ms linear
+    pointer-events: none
 
   // Placeholders
   &.placeholder
